syntax = "proto3";

package antidimon.web.userservice;

option java_multiple_files = true;
option java_package = "antidimon.web.userservice.proto";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc SearchUsersByRegex(SearchUsersByRegexRequest) returns (SearchUsersByRegexResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message RegisterUserRequest {
  string username = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
  string phone_number = 5;
}

message RegisterUserResponse {
  bool success = 1;
  string message = 2;
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByIdRequest {
  int64 userId = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message User {
  string username = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
  string phone_number = 5;
  string created_at = 6;
}

message SearchUsersByRegexRequest {
  string regex = 1;
}

message SearchUsersByRegexResponse {
  repeated UserIdUsername users = 1;
}

message UserIdUsername {
  int64 id = 1;
  string username = 2;
}

message UpdateUserRequest {
  string username = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
  string phone_number = 5;
  string password = 6;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
}

message DeleteUserRequest {
  string username = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}
